--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,38 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "jake\n",
-      "terrance\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'other_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-b482d184f7ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mexample_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# executing fuction with local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing global variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'other_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "name = \"terrance\" # global variable\n",
-    "def example_function():\n",
-    "    other_name = \"jake\" # local variable\n",
-    "    print(other_name)\n",
+    "# name = \"terrance\" # global variable\n",
+    "# def example_function():\n",
+    "#     other_name = \"jake\" # local variable\n",
+    "#     print(other_name)\n",
     "\n",
-    "example_function() # executing fuction with local variable\n",
-    "print(name) # printing global variable\n",
-    "print(other_name) # printing local variable"
+    "# example_function() # executing fuction with local variable\n",
+    "# print(name) # printing global variable\n",
+    "# print(other_name) # printing local variable"
    ]
   },
   {
@@ -86,36 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "terrance\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'first_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-db59ca215ce5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mterrance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"terrance\"\u001b[0m \u001b[0;31m# adding an instance variable, first_name to the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterrance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing instance variable accessed from the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# undefined since it is not being accessed from the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'first_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Person:\n",
-    "    pass\n",
+    "# class Person:\n",
+    "#     pass\n",
     "\n",
-    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
-    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
-    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "# terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
+    "# terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
+    "# print(terrance.first_name) # printing instance variable accessed from the instance\n",
+    "# print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -314,21 +275,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
