--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,9 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jake\n",
+      "terrance\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"terrance\" # global variable\n",
     "def example_function():\n",
@@ -52,7 +61,7 @@
     "\n",
     "example_function() # executing fuction with local variable\n",
     "print(name) # printing global variable\n",
-    "print(other_name) # printing local variable"
+    "#print(other_name) # printing local variable"
    ]
   },
   {
@@ -66,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrance\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    pass\n",
@@ -76,7 +93,7 @@
     "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
     "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
     "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "#print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -90,9 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ExampleDriver object at 0x10432dc50>\n",
+      "<__main__.ExampleDriver object at 0x10432dc18>\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleDriver:\n",
     "    pass\n",
@@ -114,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alex\n"
+     ]
+    }
+   ],
    "source": [
     "driver_one.name = 'alex'\n",
     "print(driver_one.name)"
@@ -131,11 +165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add name to driver_two"
+    "driver_two.name = 'julian'"
    ]
   },
   {
@@ -156,9 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'julian'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two)"
    ]
@@ -172,11 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two).keys()"
    ]
@@ -190,9 +246,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! How are you today?\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def say_hello(self):\n",
@@ -218,17 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "#%load_ext autoreload\n",
+    "#%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,13 +309,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
+    "driver = Driver() # assign a driver instance\n",
     "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
+    "passenger = Passenger() # assign the passenger instance\n",
     "# give the passenger instance object a 'rating' of 4.9"
    ]
   },
@@ -264,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x1043a81d0>\n",
+      "<driver.Driver object at 0x1043a8198>\n",
+      "Sorry we couldn't find a driver with the name, allison! :(\n"
+     ]
+    }
+   ],
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
@@ -304,12 +378,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'ashleigh']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write your method here that returns the list of \n",
-    "# drivers whose name starts which the letter 'a'"
+    "def find_driver_by_first_letter(letter):\n",
+    "    return [driver.name for driver in list_of_drivers if driver.name[0].lower() == letter]\n",
+    "\n",
+    "find_driver_by_first_letter('a')"
    ]
   },
   {
@@ -336,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,21 +435,21 @@
     "jake_passenger.name = \"jake\"\n",
     "ashleigh_passenger = Passenger()\n",
     "ashleigh_passenger.name = \"ashleigh\"\n",
-    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+    "list_of_passengers =  [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_driver = None # instantiate a driver\n",
-    "# add the name attribute and assign it 'Garol'\n",
-    "# add the car_make attribute and assign it 'toyota'\n",
-    "# add the car_model attribute and assign it 'camry'\n",
-    "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver = Driver() # instantiate a driver\n",
+    "best_driver.name = 'Garol'# add the name attribute and assign it 'Garol'\n",
+    "best_driver.car_make = 'toyota'# add the car_make attribute and assign it 'toyota'\n",
+    "best_driver.car_model = 'camry'# add the car_model attribute and assign it 'camry'\n",
+    "best_driver.age = '30'# add the age attribute and assign it '30'\n",
+    "best_driver.passengers = list_of_passengers# add the passengers attribute and assign it to the list_of_passengers"
    ]
   },
   {
@@ -375,11 +462,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'michelle', 'jake', 'ashleigh']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+    "names_of_passengers = [passr.name for passr in list_of_passengers] # assign the return of best_driver.passenger_names()\n",
+    "names_of_passengers"
    ]
   },
   {
@@ -391,9 +490,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. alex\n",
+      "2. michelle\n",
+      "3. jake\n",
+      "4. ashleigh\n"
+     ]
+    }
+   ],
    "source": [
     "def display_names(list_of_names):\n",
     "    i = 1\n",
@@ -401,7 +511,8 @@
     "        print(\"{}. {}\".format(i, name))\n",
     "        i += 1\n",
     "\n",
-    "# call display_names with your list of passenger names"
+    "# call display_names with your list of passenger names\n",
+    "display_names(names_of_passengers)"
    ]
   },
   {
@@ -428,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
