--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,15 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jake\n",
+      "terrance\n",
+      "bob\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"terrance\" # global variable\n",
     "def example_function():\n",
     "    other_name = \"jake\" # local variable\n",
     "    print(other_name)\n",
     "\n",
+    "other_name = 'bob'\n",
     "example_function() # executing fuction with local variable\n",
     "print(name) # printing global variable\n",
     "print(other_name) # printing local variable"
@@ -70,13 +81,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Person:\n",
-    "    pass\n",
+    "# class Person:\n",
+    "#     pass\n",
     "\n",
-    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
-    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
-    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "# terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
+    "# terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
+    "# print(terrance.first_name) # printing instance variable accessed from the instance\n",
+    "# print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -135,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add name to driver_two"
+    "driver_two.name = 'julian'"
    ]
   },
   {
@@ -218,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
-    "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
-    "# give the passenger instance object a 'rating' of 4.9"
+    "Bill = Driver()\n",
+    "Bill.miles_driven = 100000\n",
+    "Tina = Passenger()\n",
+    "Tina.rating = 4.9"
    ]
   },
   {
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +288,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x106482a58>\n",
+      "<driver.Driver object at 0x106482a20>\n",
+      "Sorry we couldn't find a driver with the name, allison! :(\n"
+     ]
+    }
+   ],
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
@@ -304,10 +325,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def find_driver_by_letter_first(list_drivers, letter):\n",
+    "    start_swith_letter =[]\n",
+    "    for driver in list_drivers:\n",
+    "        if driver.name.startswith() == letter:\n",
+    "            starts_with_letter.append(driver.name)\n",
+    "            return starts_with_letter\n",
+    "    return \"Sorry we couldn't find a driver with the name, {}! :(\".format('allison')\n",
     "# write your method here that returns the list of \n",
     "# drivers whose name starts which the letter 'a'"
    ]
@@ -336,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,21 +376,21 @@
     "jake_passenger.name = \"jake\"\n",
     "ashleigh_passenger = Passenger()\n",
     "ashleigh_passenger.name = \"ashleigh\"\n",
-    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+    "list_of_passengers = [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_driver = None # instantiate a driver\n",
-    "# add the name attribute and assign it 'Garol'\n",
-    "# add the car_make attribute and assign it 'toyota'\n",
-    "# add the car_model attribute and assign it 'camry'\n",
-    "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver = Driver()\n",
+    "best_driver.name = 'Garol'\n",
+    "best_driver.car_make = 'toyota'\n",
+    "best_driver.car_model = 'camry'\n",
+    "best_driver.age = 30\n",
+    "best_driver.passengers = list_of_passengers"
    ]
   },
   {
@@ -375,11 +403,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+    "vars(best_driver)\n",
+    "names_of_passengers = best_driver.passengers"
    ]
   },
   {
@@ -391,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
