--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,9 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jake\n",
+      "terrance\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"terrance\" # global variable\n",
     "def example_function():\n",
@@ -52,7 +61,7 @@
     "\n",
     "example_function() # executing fuction with local variable\n",
     "print(name) # printing global variable\n",
-    "print(other_name) # printing local variable"
+    "#print(other_name) # printing local variable"
    ]
   },
   {
@@ -66,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Person:\n",
-    "    pass\n",
+    "# class Person:\n",
+    "#     pass\n",
     "\n",
-    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
-    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
-    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "# terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
+    "# terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
+    "# print(terrance.first_name) # printing instance variable accessed from the instance\n",
+    "# print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -90,9 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ExampleDriver object at 0x103df9208>\n",
+      "<__main__.ExampleDriver object at 0x103df91d0>\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleDriver:\n",
     "    pass\n",
@@ -114,9 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alex\n"
+     ]
+    }
+   ],
    "source": [
     "driver_one.name = 'alex'\n",
     "print(driver_one.name)"
@@ -131,11 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add name to driver_two"
+    "# add name to driver_two\n",
+    "driver_two.name = 'julian'"
    ]
   },
   {
@@ -156,9 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'julian'}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two)"
    ]
@@ -172,11 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name'])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two).keys()"
    ]
@@ -190,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! How are you today?\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def say_hello(self):\n",
@@ -218,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "#%load_ext autoreload\n",
+    "#%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,13 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
+    "driver = Driver()\n",
+    "driver.miles_driven = 100000 # assign a driver instance\n",
     "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
+    "passenger = Passenger()\n",
+    "passenger.rating = 4.9 # assign the passenger instance\n",
     "# give the passenger instance object a 'rating' of 4.9"
    ]
   },
@@ -264,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x103e6c5f8>\n",
+      "<driver.Driver object at 0x103e6c5c0>\n",
+      "Sorry we couldn't find a driver with the name, allison! :(\n"
+     ]
+    }
+   ],
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
@@ -304,12 +373,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'ashleigh']"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# write your method here that returns the list of \n",
-    "# drivers whose name starts which the letter 'a'"
+    "# drivers whose name starts which the letter 'a'\n",
+    "def find_a_driver(drivers):\n",
+    "    a_drivers = []\n",
+    "    for driver in drivers:\n",
+    "        if driver.name.startswith('a'):\n",
+    "            a_drivers.append(driver.name)\n",
+    "#    a_drivers = (drive.name for drive.name in drivers if drive.name.startswith('a'))\n",
+    "    return a_drivers\n",
+    "\n",
+    "find_a_driver(list_of_drivers)\n"
    ]
   },
   {
@@ -336,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,21 +437,22 @@
     "jake_passenger.name = \"jake\"\n",
     "ashleigh_passenger = Passenger()\n",
     "ashleigh_passenger.name = \"ashleigh\"\n",
-    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+    "list_of_passengers = [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]\n",
+    "#print(list_of_passengers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_driver = None # instantiate a driver\n",
-    "# add the name attribute and assign it 'Garol'\n",
-    "# add the car_make attribute and assign it 'toyota'\n",
-    "# add the car_model attribute and assign it 'camry'\n",
-    "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver = Driver() # instantiate a driver\n",
+    "best_driver.name = 'Garol'# add the name attribute and assign it 'Garol'\n",
+    "best_driver.car_make = 'toyota'# add the car_make attribute and assign it 'toyota'\n",
+    "best_driver.car_model = 'camry'# add the car_model attribute and assign it 'camry'\n",
+    "best_driver.age = 30# add the age attribute and assign it '30'\n",
+    "best_driver.passengers = list_of_passengers# add the passengers attribute and assign it to the list_of_passengers"
    ]
   },
   {
@@ -375,11 +465,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+    "names_of_passengers = best_driver.passenger_names() # assign the return of best_driver.passenger_names()"
    ]
   },
   {
@@ -391,9 +481,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. alex\n",
+      "2. michelle\n",
+      "3. jake\n",
+      "4. ashleigh\n"
+     ]
+    }
+   ],
    "source": [
     "def display_names(list_of_names):\n",
     "    i = 1\n",
@@ -401,7 +502,8 @@
     "        print(\"{}. {}\".format(i, name))\n",
     "        i += 1\n",
     "\n",
-    "# call display_names with your list of passenger names"
+    "# call display_names with your list of passenger names\n",
+    "display_names(names_of_passengers)"
    ]
   },
   {
@@ -428,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
