--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,9 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jake\n",
+      "terrance\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'other_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b482d184f7ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mexample_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# executing fuction with local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing global variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'other_name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "name = \"terrance\" # global variable\n",
     "def example_function():\n",
@@ -66,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrance\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    pass\n",
@@ -76,7 +104,7 @@
     "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
     "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
     "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "# print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -90,9 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ExampleDriver object at 0x1075efa58>\n",
+      "<__main__.ExampleDriver object at 0x1075efa20>\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleDriver:\n",
     "    pass\n",
@@ -114,9 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alex\n"
+     ]
+    }
+   ],
    "source": [
     "driver_one.name = 'alex'\n",
     "print(driver_one.name)"
@@ -131,11 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add name to driver_two"
+    "# add name to driver_two\n",
+    "driver_two.name = \"Bob\""
    ]
   },
   {
@@ -156,9 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Bob'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two)"
    ]
@@ -172,11 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two).keys()"
    ]
@@ -190,9 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! How are you today?\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def say_hello(self):\n",
@@ -218,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,13 +321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
+    "driver = Driver() # assign a driver instance\n",
     "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
+    "driver.miles_driven = 100000\n",
+    "passenger = Passenger() # assign the passenger instance\n",
+    "passenger.rating = 4.9\n",
     "# give the passenger instance object a 'rating' of 4.9"
    ]
   },
@@ -264,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,18 +355,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x10768a400>\n",
+      "<driver.Driver object at 0x10768a3c8>\n",
+      "Sorry we couldn't find a driver with the name, allison! :(\n"
+     ]
+    }
+   ],
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
+    "\n",
     "michelle_driver = Driver()\n",
     "michelle_driver.name = \"michelle\"\n",
+    "\n",
     "jake_driver = Driver()\n",
     "jake_driver.name = \"jake\"\n",
+    "\n",
     "ashleigh_driver = Driver()\n",
     "ashleigh_driver.name = \"ashleigh\"\n",
+    "\n",
     "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]\n",
     "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
     "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
@@ -304,12 +396,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'jake'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# write your method here that returns the list of \n",
-    "# drivers whose name starts which the letter 'a'"
+    "# drivers whose name starts which the letter 'a'\n",
+    "def find_a_driver(list, letter):\n",
+    "    for driver in list:\n",
+    "        if driver.name.startswith(letter):\n",
+    "            return driver.name\n",
+    "\n",
+    "find_a_driver(list_of_drivers, 'j')"
    ]
   },
   {
@@ -336,33 +445,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "alex_passenger = Passenger()\n",
     "alex_passenger.name = \"alex\"\n",
+    "\n",
     "michelle_passenger = Passenger()\n",
     "michelle_passenger.name = \"michelle\"\n",
+    "\n",
     "jake_passenger = Passenger()\n",
     "jake_passenger.name = \"jake\"\n",
+    "\n",
     "ashleigh_passenger = Passenger()\n",
     "ashleigh_passenger.name = \"ashleigh\"\n",
-    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+    "\n",
+    "list_of_passengers = [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'alex'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "best_driver = None # instantiate a driver\n",
+    "best_driver = Driver() # instantiate a driver\n",
+    "\n",
     "# add the name attribute and assign it 'Garol'\n",
+    "best_driver.name = 'Garol'\n",
     "# add the car_make attribute and assign it 'toyota'\n",
+    "best_driver.car_make = 'toyota'\n",
     "# add the car_model attribute and assign it 'camry'\n",
+    "best_driver.car_model = 'camry'\n",
     "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver.age = 30\n",
+    "# add the passengers attribute and assign it to the list_of_passengers\n",
+    "best_driver.passengers = list_of_passengers\n",
+    "best_driver.passengers[0].name"
    ]
   },
   {
@@ -375,11 +506,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'michelle', 'jake', 'ashleigh']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+    "names_of_passengers = best_driver.passenger_names()\n",
+    "names_of_passengers"
    ]
   },
   {
@@ -391,9 +534,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. alex\n",
+      "2. michelle\n",
+      "3. jake\n",
+      "4. ashleigh\n"
+     ]
+    }
+   ],
    "source": [
     "def display_names(list_of_names):\n",
     "    i = 1\n",
@@ -401,7 +555,8 @@
     "        print(\"{}. {}\".format(i, name))\n",
     "        i += 1\n",
     "\n",
-    "# call display_names with your list of passenger names"
+    "# call display_names with your list of passenger names\n",
+    "display_names(names_of_passengers)"
    ]
   },
   {
