--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,18 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jake\n",
+      "terrance\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'other_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-b482d184f7ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mexample_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# executing fuction with local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing global variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'other_name' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "name = \"terrance\" # global variable\n",
-    "def example_function():\n",
-    "    other_name = \"jake\" # local variable\n",
-    "    print(other_name)\n",
+    "# name = \"terrance\" # global variable\n",
+    "# def example_function():\n",
+    "#     other_name = \"jake\" # local variable\n",
+    "#     print(other_name)\n",
     "\n",
-    "example_function() # executing fuction with local variable\n",
-    "print(name) # printing global variable\n",
-    "print(other_name) # printing local variable"
+    "# example_function() # executing fuction with local variable\n",
+    "# print(name) # printing global variable\n",
+    "# print(other_name) # printing local variable"
    ]
   },
   {
@@ -66,17 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrance\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'first_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-db59ca215ce5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mterrance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"terrance\"\u001b[0m \u001b[0;31m# adding an instance variable, first_name to the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterrance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing instance variable accessed from the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# undefined since it is not being accessed from the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'first_name' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "class Person:\n",
-    "    pass\n",
+    "# class Person:\n",
+    "#     pass\n",
     "\n",
-    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
-    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
-    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "# terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
+    "# terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
+    "# print(terrance.first_name) # printing instance variable accessed from the instance\n",
+    "# print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -90,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ExampleDriver object at 0x10598d438>\n",
+      "<__main__.ExampleDriver object at 0x10598d390>\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleDriver:\n",
     "    pass\n",
@@ -114,9 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alex\n"
+     ]
+    }
+   ],
    "source": [
     "driver_one.name = 'alex'\n",
     "print(driver_one.name)"
@@ -131,11 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "julian\n"
+     ]
+    }
+   ],
    "source": [
-    "# add name to driver_two"
+    "driver_two.name = \"julian\"\n",
+    "print(driver_two.name)"
    ]
   },
   {
@@ -156,9 +221,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'julian'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two)"
    ]
@@ -172,11 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name'])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two).keys()"
    ]
@@ -190,9 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! How are you today?\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def say_hello(self):\n",
@@ -218,17 +313,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,14 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
+    "driver = Driver() # assign a driver instance\n",
     "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
-    "# give the passenger instance object a 'rating' of 4.9"
+    "driver.miles_driven = \"100,000\"\n",
+    "passenger = Passenger() # assign the passenger instance\n",
+    "# give the passenger instance object a 'rating' of 4.9\n",
+    "passenger.rating = 4.9"
    ]
   },
   {
@@ -264,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x1058f5f98>\n",
+      "<driver.Driver object at 0x1058f5fd0>\n",
+      "Sorry we couldn't find a driver with the name, allison! :(\n"
+     ]
+    }
+   ],
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
@@ -304,12 +420,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<driver.Driver at 0x1058f5f60>, <driver.Driver at 0x1058f5940>]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# write your method here that returns the list of \n",
-    "# drivers whose name starts which the letter 'a'"
+    "# drivers whose name starts which the letter 'a'\n",
+    "def start_with_a(list_drivers, letter):\n",
+    "    return [driver for driver in list_drivers if driver.name.startswith(letter) == True]\n",
+    "\n",
+    "start_with_a(list_of_drivers, 'a')"
    ]
   },
   {
@@ -336,9 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'michelle', 'jake', 'ashleigh']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "alex_passenger = Passenger()\n",
     "alex_passenger.name = \"alex\"\n",
@@ -348,21 +490,39 @@
     "jake_passenger.name = \"jake\"\n",
     "ashleigh_passenger = Passenger()\n",
     "ashleigh_passenger.name = \"ashleigh\"\n",
-    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+    "list_of_passengers = [alex_passenger.name, michelle_passenger.name, jake_passenger.name, ashleigh_passenger.name]\n",
+    "list_of_passengers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'michelle', 'jake', 'ashleigh']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "best_driver = None # instantiate a driver\n",
+    "best_driver = Driver() # instantiate a driver\n",
     "# add the name attribute and assign it 'Garol'\n",
+    "best_driver.name = 'Garol'\n",
     "# add the car_make attribute and assign it 'toyota'\n",
+    "best_driver.car_make = 'toyota'\n",
     "# add the car_model attribute and assign it 'camry'\n",
+    "best_driver.car_make = 'camry'\n",
     "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver.age = '30'\n",
+    "# add the passengers attribute and assign it to the list_of_passengers\n",
+    "best_driver.passengers = list_of_passengers\n",
+    "best_driver.passengers"
    ]
   },
   {
@@ -375,11 +535,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alex', 'michelle', 'jake', 'ashleigh']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+    "names_of_passengers = best_driver.passenger_names() # assign the return of best_driver.passenger_names()\n",
+    "names_of_passengers"
    ]
   },
   {
@@ -391,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
